transfer to linux maching

--- a/internals/generators/component/test.js.hbs
+++ b/internals/generators/component/test.js.hbs
@@ -2,7 +2,7 @@
  *
  * Tests for {{ properCase name }}
  *
- * For more information, please go back to the react-boilerplate repo information at 
+ * For more information on testing, go back to the boilerplate and
  * @see https://github.com/react-boilerplate/react-boilerplate/tree/master/docs/testing
  *
  */
